import "MsgHead.proto";    
message MsgLG2GateLoginACK
{	
	enum enResult
	{
		LG_OK				 = 0;
		LG_ERROR			 = 1;
		LG_ERRORPASSWORD     = 2;
		LG_NOTFOUNDMAIL		 = 3;
		LG_ALREADYLOGIN      = 4;
	}

	required uint64			id = 1;
	required uint64         account = 2; 
	required enResult		result = 3;
}

enum enMsgBindResult
{
	BindMsgResult_OK = 0;
	BindMsgResultMailAlreadyBinded = 1;
	BindMsgResultMacAlreadyBinded = 2;
	BindMsgResultNotFoundAccount = 3;
	BindMsgResultEmptyMac = 4;
	BindMsgResultEmptyPassword = 5;
	BindMsgResultEmptyMail = 6;
	BindMsgResultErrorPassword = 7;
	BindMsgResultErrorMac = 8;
	BindMsgResultErrorMail = 9;
	BindMsgResultNotFoundUser = 10;
	BindMsgResultError_Unknown = 11;
}
enum enBindTypeLogic
{
   TypeBindLogic_BindMail = 0;
   TypeBindLogic_UnbindMac = 1;
   TypeBindLogic_BindMac = 2;
}
message MsgLG2GateBindACK
{	
	required uint64                 account = 1; 
	required enMsgBindResult		result = 2;
	required enBindTypeLogic        enType = 3;
}

message MsgLG2GateReqLoginUserList
{

}


